justified text align in project and corrected german CV

--- a/style.css
+++ b/style.css
@@ -352,7 +352,7 @@ section .title::before{
     background: #222;
     border-radius: 6px;
     padding: 25px 35px;
-    text-align: center;
+    text-align: justify;
     overflow: hidden;
     transition: all 0.3s ease;
 }
